--- a/config-client-java.properties
+++ b/config-client-java.properties
@@ -1,3 +1,3 @@
-remote.service.url=https://009-config-server-java-a3-1.apps.eu01.cloud.schwarz
-logging.level.com.example=DEBUG
+remote.service.url=https://009-config-server-java-a3-2.apps.eu01.cloud.schwarz
+logging.level.com.example=ERROR
 altoros.password=abracadabra
